# promon

./: .gitignore  CMakeLists.txt  README.md
cross-platform-header/: cph.cpp  cph.h
docs/: design.md  linux-metrics.md  macos-metrics.md
include/promon/app/: application.hpp  options.hpp
include/promon/core/: format.hpp  rate.hpp  snapshot.hpp  types.hpp
include/promon/diagnostics/: io_pressure.hpp  memory_pressure.hpp  scheduler_pressure.hpp
include/promon/platform/: backend.hpp
include/promon/platform/linux/: cpu.hpp  memory.hpp  process.hpp  scheduler.hpp  thread.hpp  vmstat.hpp
include/promon/platform/linux/procfs/: meminfo.hpp  reader.hpp  vmstat.hpp
include/promon/platform/macos/: mach_memory.hpp  process.hpp  thread.hpp  vmstat.hpp
include/promon/platform/macos/libproc/: process_info.hpp  process_io.hpp  process_list.hpp
include/promon/platform/macos/mach/: cpu_load.hpp  host_memory.hpp  thread_info.hpp
include/promon/platform/macos/sysctl/: hw_memsize.hpp  loadavg.hpp  procargs.hpp  uptime.hpp
include/promon/ui/: render_model.hpp  renderer.hpp  snapshot_presenter.hpp  value_format.hpp
legacy/: main_old.cpp
src/: main.cpp
src/app/: application.cpp  options.cpp
src/core/: format.cpp  rate.cpp  snapshot.cpp
src/diagnostics/: io_pressure.cpp  memory_pressure.cpp  scheduler_pressure.cpp
src/platform/linux/: cpu.cpp  memory.cpp  process.cpp  scheduler.cpp  thread.cpp  vmstat.cpp
src/platform/linux/procfs/: meminfo.cpp  reader.cpp  vmstat.cpp
src/platform/macos/: mach_memory.cpp  process.cpp  thread.cpp  vmstat.cpp
src/platform/macos/libproc/: process_info.cpp  process_io.cpp  process_list.cpp
src/platform/macos/mach/: cpu_load.cpp  host_memory.cpp  thread_info.cpp
src/platform/macos/sysctl/: hw_memsize.cpp  loadavg.cpp  procargs.cpp  uptime.cpp
src/ui/: snapshot_presenter.cpp  value_format.cpp
tests/: README.md
tools/scripts/: collect_linux_snapshot.sh
ui/cli/: cli_renderer.cpp  cli_renderer.hpp
ui/qt/: README.md
ui/tui/: README.md
